feat(home): 精选导读模块

--- a/src/assets/styles/color.less
+++ b/src/assets/styles/color.less
@@ -4,18 +4,18 @@
 @primary-color: #0089ff;
 @white: #fff;
 
-@blue-base: blue;
-@purple-base: purple;
-@cyan-base: cyan;
-@green-base: green;
-@magenta-base: magenta;
-@pink-base: pink;
-@red-base: red;
-@orange-base: orange;
-@yellow-base: yellow;
-@volcano-base: yellow;
-@geekblue-base: yellow;
-@lime-base: yellow;
-@gold-base: gold;
-@black: black;
-@icon-color: #000;
+// @blue-base: blue;
+// @purple-base: purple;
+// @cyan-base: cyan;
+// @green-base: green;
+// @magenta-base: magenta;
+// @pink-base: pink;
+// @red-base: red;
+// @orange-base: orange;
+// @yellow-base: yellow;
+// @volcano-base: yellow;
+// @geekblue-base: yellow;
+// @lime-base: yellow;
+// @gold-base: gold;
+// @black: black;
+// @icon-color: #000;
