--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -27,7 +27,11 @@ h6 {
 }
 
 a {
-  color: #7546c9;
+  color: #000 !important;
+
+  &:hover {
+    color: #0089ff !important;
+  }
 }
 
 [data-theme='dark'] a {
