feat(Navigation): 提取导航栏组件

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -26,13 +26,13 @@ h6 {
   font-size: 1.5em;
 }
 
-a {
-  color: #000 !important;
+// a {
+//   color: #000 !important;
 
-  &:hover {
-    color: #0089ff !important;
-  }
-}
+//   &:hover {
+//     color: #0089ff !important;
+//   }
+// }
 
 [data-theme='dark'] a {
   color: #390c7d;
