feat(layout): 修改全局背景

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -34,6 +34,10 @@ h6 {
 //   }
 // }
 
+.main {
+  background: url(https://www.talklee.com/zb_users/theme/hopelee/style/images/bg-light-min.jpg);
+}
+
 [data-theme='dark'] a {
   color: #390c7d;
   background-color: transparent;
