feat(login): 注册登陆页面提取组件

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -38,6 +38,18 @@ h6 {
   background: url(https://www.talklee.com/zb_users/theme/hopelee/style/images/bg-light-min.jpg);
 }
 
+.submit {
+  background-color: #448ef658;
+  transition: all 0.3s;
+
+  &:hover {
+    color: white;
+    background-color: #448ef6c0;
+
+    transition: all 0.3s;
+  }
+}
+
 [data-theme='dark'] a {
   color: #390c7d;
   background-color: transparent;
